[package]
name = "rapier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.81.0", features = ["runtime", "derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
tokio = { version = "1.27.0", features = ["full"] }